tests/src/frontend/typechecking/invalid/tunder_generic_1.sk
base class Foo<-T> {
  fun foo(T): void {
    void
  }
}

class Bar() extends Foo<Int>

fun get_bar(): Foo<_> {
  Bar()
}

fun main(): void {
  print_string("Pass")
}
